crates/analyzer/tests/snapshots/errors__mislabeled_call_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: argument label mismatch
  ┌─ compile_errors/mislabeled_call_args.fe:4:13
  │
4 │         bar(doesnt_exist=1, me_neither=2)
  │             ^^^^^^^^^^^^ expected `val1`

error: argument label mismatch
  ┌─ compile_errors/mislabeled_call_args.fe:4:29
  │
4 │         bar(doesnt_exist=1, me_neither=2)
  │                             ^^^^^^^^^^ expected `val2`


